--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@ body {
           </form>
         </div>
       </section>
+          <img src="https://todayweather.s3.amazonaws.com/weather.jpg" alt="">
       <section class="ajax-section">
         <div class="container">
           <ul class="cities"></ul>
