--- a/index.html
+++ b/index.html
@@ -282,13 +282,10 @@ body {
  </style>
 </head>
 <body>
-    <div class="api">
-        <div class="container">🌞 This demo needs an OpenWeather API key to work. <a target="_blank" href="https://home.openweathermap.org/users/sign_up">Get yours here for free!</a>
-        </div>
-      </div>
+  
       <section class="top-banner">
         <div class="container">
-          <h1 class="heading">Simple Weather App</h1>
+          <h1 class="heading">Today's Weather</h1>
           <form>
             <input type="text" placeholder="Search for a city" autofocus>
             <button type="submit">SUBMIT</button>
